--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+.all-products {
+  margin-top: 10px;
+  display: flex;  
+}
+.img {
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+li {
+  list-style-type: none;
+}
+.product {
+  margin: 20px;
+}
+.back {
+  color: aliceblue;
+}
+.max-width {
+  max-width: 900px;
+  margin: auto;
+}
+.detail {
+  margin: auto;
+}
+.text-description {
+  padding: 20px;
+}
+.counter{
+  width: 25px;
+  height: 25px;
+  line-height: 21px;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border: solid 1px rgb(94, 94, 94);
+  color: #ffffff;
   text-align: center;
+  display: block;
+  padding-bottom: 20px;
+  font-size: 15px;
+  background-color: rgb(94, 94, 94);
+  margin-left: -8px;
+  margin-top: -8px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-brand {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.total {
+  text-align: center;
+  margin: 40px;
+
+}
+.noItems {
+  text-align: center;
+  margin-top: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.back-h {
+  margin: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  position: fixed;
 }
